extends Panel

export (ViewportTexture) var minimap_texture

export (PoolColorArray) var colors# index 0 is player 1
export (PoolColorArray) var gaia_objects
export (Array) var object_icons = []

export (int,0,4) var map_leyers = 0


func _on_help_button_pressed():
	pass # replace with function body




func _on_command_button_pressed():
	pass # replace with function body




func _on_players_button_pressed():
	pass # replace with function body




func _on_map_leyer_button_pressed():
	pass # replace with function body
